# helios.rs

./: .gitignore  .travis.yml  Cargo.toml  run-benchmarks.sh
.github/workflows/: build.yaml
benches/: ballsweekend_benchmark.rs  helios_benchmark.rs
src/: lib.rs  main.rs  noise_cmd.rs  render_cmd.rs
src/scenes/: mod.rs  three_spheres_light.rs  two_spheres_light.rs  two_spheres_perlin.rs  weekend_balls.rs  weekend_spheres.rs
src/tracer/: camera.rs  color.rs  geometry_traits.rs  intersection.rs  math.rs  mod.rs  ray.rs  render_context.rs  scene.rs  scene_object.rs  scene_object_list.rs
src/tracer/bounding_volumes/: aabb.rs  boundable.rs  bvh.rs  mod.rs
src/tracer/geometry/: sphere.rs
src/tracer/lights/: diffuse_light.rs  mod.rs
src/tracer/material/: material.rs  mod.rs  texture.rs  traits.rs
src/tracer/material/materials/: dielectric.rs  lambertian.rs  metal.rs  mod.rs  utils.rs
src/tracer/material/textures/: checkers.rs  mod.rs  noise.rs  solid.rs
src/tracer/material/textures/noises/: mod.rs  perlin.rs  permutation_table.rs
src/tracer/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs  utils.rs
