[package]
name = "helios"
version = "0.1.0"
authors = ["Eran Kampf <eran@ekampf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1"
structopt = "0.2.18"
log = "0.4.8"
env_logger = "0.6.2"
clap-verbosity-flag = "0.2.0"
indicatif = "0.11.0"
console = "0.8.0"
opener = "0.4.0"

serde = { version = "1.0.99", features = ["derive", "rc"] }
serde_json = "1.0.40"

itertools = "0.8.0"
num_cpus = "1.10.1"
rayon = "1.2.0"
rand = "0.7.0"
cgmath = "0.17.0"
image = "0.22.1"
noise = "0.5.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "helios_benchmark"
harness = false
