[package]
name = "helios"
version = "0.1.0"
authors = ["Eran Kampf <eran@ekampf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.5"
structopt = "0.3.20"
log = "0.4.8"
env_logger = "0.9.3"
clap-verbosity-flag = "0.3.1"
indicatif = "0.15.0"
console = "0.13.0"
opener = "0.4.0"

serde = { version = "1.0.99", features = ["derive", "rc"] }
serde_json = "1.0.40"

itertools = "0.9.0"
num_cpus = "1.10.1"
rayon = "1.2.0"
rand = "0.7.0"
cgmath = "0.17.0"
image = "0.23.12"
noise = "0.6.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "helios_benchmark"
harness = false
